Fix select to be too large on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,7 @@ body {
 #wrapper {
     flex: 1;
 }
+
+.mw70 {
+    max-width: 70%;
+}
